# gpt-dall-e-bot

./: README.md  alembic.ini  app.py  bot.py  config.py  main.py  pyproject.toml  tg_bot.db
alembic/: env.py
alembic/versions/: 15f461c444ca_migrate.py  1daf54325a81_migrations.py  20071cba2bd2_migratiocs.py  2476b1062b33_migrate.py  2f01342789c6_migrations.py  3371de1c7bc5_migration.py  39e3b99e9f5d_migrate.py  40f88b67dc61_migrations.py  42c0bc6b404d_migrate.py  4774607055bd_migrate.py  48501a106eaa_migrations.py  670e76f32bab_.py  689c126a9c73_migrate.py  75db0d124cfc_migration.py  7c7a5ef1761e_migrate.py  8301ed12ee9c_migrations.py  9927ed1859f7_migrations.py  a6bbfd55fb11_123.py  ae212f04587d_migrations.py  bd8f552be0e8_migrations.py  ca474f00c5f6_migrations.py  cc16e6e10476_migrations.py  d16d47d677a0_migrations.py  d58bd5534923_migrate.py  d925a5409546_migrate.py  dd42516533e8_migratiocs.py  e0c1e52b6927_migrations.py
handlers/: __init__.py  admin.py  ai.py  filters.py  markups.py  middlewares.py  midjourney.py  openai.py  openai_api.py  payment.py  states.py  tasks.py  user.py
images/: stub.txt
models/: databases.py
models/dbs/: enums.py  models.py  orm.py
utils/: midjourney.py  openai_api.py  payments.py
