[tool.poetry]
name = "gpt-dall-e-bot"
version = "0.1.0"
description = ""
authors = ["ksiim <makskrutchev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.13.1"
aiosqlite = "^0.20.0"
asyncpg = "^0.29.0"
sqlalchemy = "^2.0.35"
python-dotenv = "^1.0.1"
greenlet = "^3.1.1"
apscheduler = "^3.10.4"
alembic = "^1.13.3"
psycopg2 = "^2.9.9"
openai = "^1.51.0"
fastapi = "^0.115.2"
uvicorn = "^0.32.0"
yookassa = "^3.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
