[project]
name = "gpt-dall-e-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles==24.1.0",
    "aiogram==3.13.1",
    "aiohappyeyeballs==2.4.3",
    "aiohttp==3.10.9",
    "aiosignal==1.3.1",
    "aiosqlite==0.20.0",
    "alembic==1.13.3",
    "annotated-types==0.7.0",
    "anyio==4.6.0",
    "apscheduler==3.10.4",
    "asyncpg==0.29.0",
    "attrs==24.2.0",
    "certifi==2024.8.30",
    "charset-normalizer==3.4.0",
    "click==8.1.7",
    "colorama==0.4.6",
    "deprecated==1.2.14",
    "distro==1.9.0",
    "fastapi==0.115.2",
    "frozenlist==1.4.1",
    "greenlet==3.1.1",
    "h11==0.14.0",
    "httpcore==1.0.6",
    "httpx==0.27.2",
    "idna==3.10",
    "jiter==0.5.0",
    "magic-filter==1.0.12",
    "mako==1.3.5",
    "markupsafe==2.1.5",
    "multidict==6.1.0",
    "netaddr==1.3.0",
    "openai==1.51.0",
    "psycopg2==2.9.9",
    "pydantic-core==2.23.4",
    "pydantic==2.9.2",
    "python-dotenv==1.0.1",
    "pytz==2024.2",
    "requests==2.32.3",
    "six==1.16.0",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.35",
    "starlette==0.40.0",
    "tqdm==4.66.5",
    "typing-extensions==4.12.2",
    "tzdata==2024.2",
    "tzlocal==5.2",
    "urllib3==2.2.3",
    "uvicorn==0.32.0",
    "wrapt==1.16.0",
    "yarl==1.13.1",
    "yookassa==3.3.0",
]
